# dioxus-website

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: rust.yml
src/: components.rs  logger.rs  macros.rs  main.rs  router.rs
src/Pages/: Contact.rs  Err404.rs  Home.rs  mod.rs
src/components/: Contact.rs  Err404.rs  Home.rs  Jobs.rs  Me.rs  Nav.rs  Projects.rs  mod.rs  navbar.rs
src/pages/: About.rs  Contact.rs  Experience.rs  Work.rs  mod.rs
