[package]
name = "dioxus-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "*" }
dioxus-fullstack = { version = "*" }
dioxus-router = { version = "*" }
serde = "1.0.188"

[features]
default = []
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[package.metadata.scripts]
build = "dx build --features web"
ssr = "cargo run-script build && cargo run --features ssr --release"
